// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders the component 1`] = `
<div
  class="Card InlineEntryCard Card--padding-default"
  data-test-id="cf-ui-inline-entry-card"
>
  <div
    class="InlineEntryCard__status-indicator"
  />
  <span
    class="InlineEntryCard__text-wrapper"
  >
    Title of inline entry
  </span>
</div>
`;

exports[`renders the component with a dropdown 1`] = `
<div
  class="Card InlineEntryCard my-extra-class Card--padding-default"
  data-test-id="cf-ui-inline-entry-card"
>
  <div
    class="InlineEntryCard__status-indicator"
  />
  <span
    class="InlineEntryCard__text-wrapper"
  >
    Title of inline entry
  </span>
  <div
    class="Dropdown InlineEntryCard__actions"
    data-test-id="cf-ui-card-actions"
  >
    <button
      aria-expanded="false"
      aria-haspopup="menu"
      class="IconButton IconButton--secondary"
      data-test-id="cf-ui-icon-button"
      type="button"
    >
      <div
        class="IconButton__inner"
        tabindex="-1"
      >
        <svg
          class="Icon Icon--small Icon--primary IconButton__icon"
          data-test-id="cf-ui-icon"
          height="1em"
          viewBox="0 0 24 24"
          width="1em"
        >
          <path
            d="M0 0h24v24H0z"
            fill="none"
          />
          <path
            d="M6 10c-1.1 0-2 .9-2 2s.9 2 2 2 2-.9 2-2-.9-2-2-2zm12 0c-1.1 0-2 .9-2 2s.9 2 2 2 2-.9 2-2-.9-2-2-2zm-6 0c-1.1 0-2 .9-2 2s.9 2 2 2 2-.9 2-2-.9-2-2-2z"
          />
        </svg>
        <span
          class="IconButton__label"
        >
          Actions
        </span>
      </div>
    </button>
  </div>
</div>
`;

exports[`renders the component with an additional class name 1`] = `
<div
  class="Card InlineEntryCard my-extra-class Card--padding-default"
  data-test-id="cf-ui-inline-entry-card"
>
  <div
    class="InlineEntryCard__status-indicator"
  />
  <span
    class="InlineEntryCard__text-wrapper"
  >
    Title of inline entry
  </span>
</div>
`;

exports[`renders the component with published status 1`] = `
<div
  class="Card InlineEntryCard my-extra-class Card--padding-default"
  data-test-id="cf-ui-inline-entry-card"
>
  <div
    class="InlineEntryCard__status-indicator InlineEntryCard__status-indicator--published"
  />
  <span
    class="InlineEntryCard__text-wrapper"
  >
    Title of inline entry
  </span>
</div>
`;
